// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeekViewComponent renders a week with rehearsals 1`] = `
<div>
  <div
    className="ui fluid top fixed nine item menu"
  >
    <div
      className="icon item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="chevron left icon"
      />
      
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          S
        </div>
        14
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          M
        </div>
        15
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          T
        </div>
        16
      </h3>
      <div>
        <i
          aria-hidden="true"
          className="circle tiny icon"
        />
      </div>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          W
        </div>
        17
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          T
        </div>
        18
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          F
        </div>
        19
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          S
        </div>
        20
      </h3>
      <div>
        <i
          aria-hidden="true"
          className="circle tiny icon"
        />
      </div>
    </div>
    <div
      className="icon item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="chevron right icon"
      />
      
    </div>
  </div>
  <div
    className="ui text container"
    style={
      Object {
        "paddingTop": "6rem",
      }
    }
  >
    <div
      className="ui celled relaxed list"
      role="list"
    >
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        <div
          className="header"
        >
          Sun, January 14
        </div>
        No Rehearsals
      </div>
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        <div
          className="header"
        >
          Mon, January 15
        </div>
        No Rehearsals
      </div>
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        <div
          className="header"
        >
          Tue, January 16
        </div>
        <div
          className="ui bulleted list"
          role="list"
        >
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            19:00 - 22:00
          </div>
        </div>
      </div>
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        <div
          className="header"
        >
          Wed, January 17
        </div>
        No Rehearsals
      </div>
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        <div
          className="header"
        >
          Thu, January 18
        </div>
        No Rehearsals
      </div>
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        <div
          className="header"
        >
          Fri, January 19
        </div>
        No Rehearsals
      </div>
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        <div
          className="header"
        >
          Sat, January 20
        </div>
        <div
          className="ui bulleted list"
          role="list"
        >
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            13:00 - 14:30
          </div>
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            14:30 - 16:00
          </div>
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            16:00 - 18:00
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WeekViewComponent renders correctly with no rehearsals 1`] = `
<div>
  <div
    className="ui fluid top fixed nine item menu"
  >
    <div
      className="icon item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="chevron left icon"
      />
      
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          S
        </div>
        14
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          M
        </div>
        15
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          T
        </div>
        16
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          W
        </div>
        17
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          T
        </div>
        18
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          F
        </div>
        19
      </h3>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <h3
        align="center"
        className="ui header"
      >
        <div
          className="sub header"
        >
          S
        </div>
        20
      </h3>
    </div>
    <div
      className="icon item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="chevron right icon"
      />
      
    </div>
  </div>
  <div
    className="ui text container"
    style={
      Object {
        "paddingTop": "6rem",
      }
    }
  >
    <p
      style={
        Object {
          "marginTop": "25%",
          "textAlign": "center",
        }
      }
    >
      No Rehearsals for 
      Jan 14
       - 
      Jan 20
    </p>
  </div>
</div>
`;
